adding wishlist page, showing logged user name, header enhancements

--- a/src/login/index.html
+++ b/src/login/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MoviesDB | Login</title>
     <script src="../js/main.js" type="module"></script>
-    <script src="../js/login.js" type="module"></script>
+    <script src="../js/login.js" type="module"></script>    
   </head>
-
 <body>
     <!-- <header class="divider" id="main-header"></header> -->
+    
     <section class="position-relative py-4 py-xl-5">
         <div class="container">
             <div class="row mb-5">
@@ -28,9 +28,11 @@
                                 <div class="mb-3"><input class="form-control" type="email" id="email" name="email" required value="user1@email.com" placeholder="Email" /></div>
                                 <div class="mb-3"><input class="form-control" type="password" required id="password" name="password" placeholder="Password" /></div>
                                 <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Login</button></div>
+                                <div id="alert-container" class="mb-5"></div>
                             </form>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
