changing authentication server, saving email in localstorage, and other changes

--- a/src/movies/index.html
+++ b/src/movies/index.html
@@ -15,7 +15,7 @@
         <br>
         <div class="row">
           <div class="col">
-            <button class="btn btn-primary" type="button">Add Movie</button>
+            <button class="btn btn-primary" type="button" onclick="window.location='/movies/new/'">Add Movie</button>
           </div>
           <div class="col">
             <form class="d-flex" role="search">
@@ -51,7 +51,7 @@
                 <td>DVD</td>
                 <td>Library, shelf 2</td>
                 <td>
-                  <button class="btn btn-primary" type="button">
+                  <button class="btn btn-primary" type="button" onclick="window.location='/movies/edit/?id=1'">
                        Edit    </button
                   ><span>  </span
                   ><button class="btn btn-primary" type="button">Remove</button>
@@ -64,7 +64,7 @@
                 <td>DVD</td>
                 <td>Library, shelf 1</td>
                 <td>
-                  <button class="btn btn-primary" type="button">
+                  <button class="btn btn-primary" type="button" onclick="window.location='/movies/edit/?id=2'">
                        Edit    </button
                   ><span>  </span
                   ><button class="btn btn-primary" type="button">Remove</button>
