--- a/src/wishlists/index.html
+++ b/src/wishlists/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MoviesDB | Wishlist</title>
     <script src="../js/main.js" type="module"></script>
+    <style>
+      table {
+        width: 100%;
+        table-layout: fixed; /* Ensures equal width for columns */
+      }
+      th, td {
+        word-wrap: break-word; /* Makes sure the content breaks into the next line if necessary */
+      }
+    </style>
   </head>
 
   <body>
