--- a/src/movies/index.html
+++ b/src/movies/index.html
@@ -17,7 +17,7 @@
           <div class="col">
             <button class="btn btn-primary" type="button" onclick="window.location='/movies/new/'">Add Movie</button>
           </div>
-          <div class="col">
+          <div class="col" style="display: none;">
             <form class="d-flex" role="search">
               <input
                 class="form-control me-2"
