--- a/src/movies/new/index.html
+++ b/src/movies/new/index.html
@@ -55,7 +55,7 @@
             />
             <br />
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="wishlist">
+              <input class="form-check-input" type="checkbox" name="wishlist" id="wishlist">
               <label class="form-check-label" for="wishlist">
                 Wishlist
               </label>
