--- a/src/movies/edit/index.html
+++ b/src/movies/edit/index.html
@@ -14,6 +14,8 @@
       <h4>Movies / Edit #<span id="movie-id"></span></h4>
       <div class="row align-content-center">
         <form class="form" action="/save-movie" method="PUT">
+          <img src="" id="posterImg" style="width: 128px; display: none;" class="img-fluid" />
+          
           <div class="col offset-md-0">
             <input class="form-control" name="id" id="id" type="hidden" />
             <input class="form-control" name="poster" id="poster" type="hidden" readonly />
@@ -51,7 +53,7 @@
             />
             <br />
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="wishlist">
+              <input class="form-check-input" type="checkbox" name="wishlist" id="wishlist">
               <label class="form-check-label" for="wishlist">
                 Wishlist
               </label>
