changing headers, layout of active link

--- a/src/movies/index.html
+++ b/src/movies/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="divider" id="main-header"></header>
       <div class="container">
-        <h4>Index of /Movies</h4>
+        <h4>Movies /</h4>
         <br>
         <div class="row">
           <div class="col">
