--- a/src/wishlists/index.html
+++ b/src/wishlists/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="divider" id="main-header"></header>
       <div class="container">
-        <h4>Index of /Wishlist</h4>
+        <h4>Wishlist /</h4>
         <br>
         <div class="row">
         <br>
