--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; url=login/index.html" />
+    <meta http-equiv="refresh" content="0; url=/wdd330-moviedb/login/index.html" />
   </head>
   <body></body>
 </html>
