--- a/login/index.html
+++ b/login/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MoviesDB | Login</title>
     
-    <script type="module" crossorigin src="/wdd330-moviedb/assets/auth-40e2bfcb.js"></script>
     <script type="module" crossorigin src="/wdd330-moviedb/assets/main-eef80a3f.js"></script>
+    <link rel="modulepreload" crossorigin href="/wdd330-moviedb/assets/auth-40e2bfcb.js">
     <link rel="stylesheet" href="/wdd330-moviedb/assets/auth-45676771.css">
   </head>
   <body>
