--- a/src/movies/index.html
+++ b/src/movies/index.html
@@ -15,7 +15,7 @@
         <br>
         <div class="row">
           <div class="col">
-            <button class="btn btn-primary" type="button" onclick="window.location='/movies/new/'">Add Movie</button>
+            <button class="btn btn-primary" type="button" onclick="window.location='/wdd330-moviedb/movies/new/'">Add Movie</button>
           </div>
           <div class="col" style="display: none;">
             <form class="d-flex" role="search">
