--- a/movies/index.html
+++ b/movies/index.html
@@ -6,7 +6,7 @@
     <title>MoviesDB | Index</title>
     
     
-    <script type="module" crossorigin src="/wdd330-moviedb/assets/movies-e182bc25.js"></script>
+    <script type="module" crossorigin src="/wdd330-moviedb/assets/movies-7bfbfd5d.js"></script>
     <link rel="modulepreload" crossorigin href="/wdd330-moviedb/assets/auth-40e2bfcb.js">
     <link rel="modulepreload" crossorigin href="/wdd330-moviedb/assets/main-5f9f3224.js">
     <link rel="stylesheet" href="/wdd330-moviedb/assets/auth-45676771.css">
@@ -19,7 +19,7 @@
         <br>
         <div class="row">
           <div class="col">
-            <button class="btn btn-primary" type="button" onclick="window.location='/movies/new/'">Add Movie</button>
+            <button class="btn btn-primary" type="button" onclick="window.location='/wdd330-moviedb/movies/new/'">Add Movie</button>
           </div>
           <div class="col" style="display: none;">
             <form class="d-flex" role="search">
