fix o form validation and form action

--- a/src/movies/edit/index.html
+++ b/src/movies/edit/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <h4>Movies / Edit #<span id="movie-id"></span></h4>
       <div class="row align-content-center">
-        <form class="form" action="/save-movie" method="PUT">
+        <form class="form" action="/wdd330-moviedb/save-movie" method="PUT">
           <img src="" id="posterImg" style="width: 128px; display: none;" class="img-fluid" />
           
           <div class="col offset-md-0">
