--- a/movies/new/index.html
+++ b/movies/new/index.html
@@ -22,7 +22,7 @@
             </div>
         </div> -->
       <div class="row align-content-center">
-        <form class="form" action="/save-movie" method="PUT">
+        <form class="form" action="/wdd330-moviedb/save-movie" method="PUT">
           <img src="" id="posterImg" style="width: 128px; display: none;" class="img-fluid" />
           <div class="col offset-md-0">
             <input class="form-control" name="id" id="id" type="hidden" />
